# Rat-MQ

./: Cargo.toml  README.MD
src/: main.rs
src/api/: api.rs  schemas.rs
src/core/structs/: client.rs  dispatcher.rs  in_progress_buffer.rs  message.rs  mod.rs  queue.rs  sender.rs
